@@ -15,10 +15,10 @@ Visualization and identification of the states that best characterize a group of
 seqimplic(seqdata, group, with.missing = FALSE, weighted = TRUE, na.rm = TRUE)
 \method{plot}{seqimplic}(x, main = NULL, ylim = NULL, xaxis = TRUE,
     ylab = "Implication", yaxis = TRUE, axes = "all", xtlab = NULL,
-	cex.axis = 1, with.legend = "auto", ltext = NULL, cex.legend = 1,
-	legend.prop = NA, rows = NA, cols = NA, conf.level = 0.95, lwd = 1,
-	only.levels = NULL, ...)
-\method{print}{seqimplic}(x, xtstep = x$xtstep, round = NULL,
+    xtstep = NULL, tick.last = NULL, cex.axis = 1, with.legend = "auto", 
+    ltext = NULL, cex.legend = 1, legend.prop = NA, rows = NA, cols = NA, 
+    conf.level = 0.95, lwd = 1, only.levels = NULL, ...)
+\method{print}{seqimplic}(x, xtstep = NULL, tick.last = NULL, round = NULL,
     conf.level = NULL, na.print = "", ...)
 }
 %- maybe also 'usage' for other objects documented here.
@@ -39,6 +39,8 @@ Logical. If \code{TRUE} (default), observations with missing values on the \code
  A sequence of typical state object as generated by \code{seqimplic}.
 }
 \item{xtstep}{Integer. Optional interval at which the tick-marks and labels of the x-axis are displayed. For example, with \code{xtstep=3} a tick-mark is drawn at position 1, 4, 7, etc... The display of the corresponding labels depends on the available space and is dealt with automatically. If unspecified, the \code{xtstep} attribute of the \code{x} object is used.}
+ \item{tick.last}{Logical. Should a tick mark be enforced at the last position on the x-axis? If unspecified, the \code{tick.last} attribute of the \code{x} object is used.}
+
  \item{main}{title for the graphic. Default is \code{NULL}.}
 \item{ylim}{
 %%     ~~Describe \code{ylim} here~~
