@@ -1,10 +1,17 @@
-                CHANGES IN TraMineRextras VERSION 0.5.3 [2018-07-04] (Development version)
+                CHANGES IN TraMineRextras VERSION 0.5.3 [2018-08-15] (Development version)
 
 Changes in existing functions
+    o   plot.stslist.surv(), seqplot.tentrop(), seqplot.tentrop.m(), 
+        plot.seqimplic(), print.seqimplic(): new argument 'tick.last' 
+        that when set as TRUE allows to enforce a tick mark at 
+        the last position on the time x-axis. Has no effect when 
+        the last position is 1 + a multiple of xtstep. 
+        Default is to use the 'tick.last' attribute of the state 
+        sequence object.
     o   seqrep.grp() an error is raised when one of the groups has less than two cases.
 
 Bug fixes
-    o   seqgen.missing(): the number of left and right 
+    o   seqgen.missing(): the number of left and right
         elements to be turned into missings were inverted.
 
 Misc
